--- a/styles/_air.scss
+++ b/styles/_air.scss
@@ -3,6 +3,8 @@
     margin-left: 60px;
   }
   &__container {
+    transform: translate(320px, -50px);
+    position: relative;
     margin-top: 33px;
     row-gap: 40px;
     padding-left: 60px;
@@ -36,9 +38,10 @@
 }
 @media screen and (max-width: 1100px) {
   .air {
-    // &__container {
-    //   flex-direction: column;
-    // }
+    &__container {
+      position: relative;
+      transform: translate(-26px, -40px);
+    }
     &__content {
       flex-direction: column;
     }
@@ -50,15 +53,24 @@
   .air__tooltip {
     &-1 {
       top: 110px;
-      right: 350px;
+      left: 390px;
     }
     &-2 {
       top: 281px;
-      right: 390px;
+      right: 310px;
     }
     &-3 {
       bottom: 284px;
-      right: 380px;
+      right: 300px;
     }
   }
+}
+.text1 {
+  transform: translate(-10px, -20px);
+}
+.text2 {
+  transform: translate(-10px, -20px);
+}
+.text3 {
+  transform: translate(-10px, -20px);
 }
