--- a/styles/style.scss
+++ b/styles/style.scss
@@ -87,6 +87,7 @@ img {
   font-size: var(--h2-font-size);
   text-align: center;
   margin-bottom: 24px;
+  margin-top: 20px;
 }
 
 @media screen and (min-width: 1150px) {
